--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 server.port=8081
+
+# name that the client will use to register with the disco server
+spring.application.name=dave
+# location of disco server
+eureka.client.serviceUrl.defaultZone= http://localhost:4494/eureka/
