added load balancing

--- a/micro-message/src/main/resources/application.properties
+++ b/micro-message/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8888
 
 # name that the client will use to register with the disco server
-spring.application.name=message
+spring.application.name=message-api
 # location of disco server
 eureka.client.serviceUrl.defaultZone= http://localhost:4494/eureka/
